# Crypto-Index-Collector-System

./: .dockerignore  Cargo.toml  Dockerfile  README.md  TODO.md  client-README.md  config.disabled-feeds.toml  config.no-db.toml  config.performance.toml  config.simple.toml  config.test-ema.toml  config.test-sma.toml  config.toml  docker-compose.yml  notify.sh  supervisor-README.md
docs/: CLIENT.md  COLLECTOR.md  DOCKER.md  SUPERVISOR.md  TESTING.md
src/: .dockerignore  Dockerfile  client.rs  config.rs  db.rs  docker-compose.yml  error.rs  index.rs  lib.rs  main.rs  models.rs  smoothing.rs  supervisor.rs
src/config/: mod.rs  models.rs
src/exchange/: binance.rs  coinbase.rs  mod.rs  traits.rs
src/index/: calculator.rs  mod.rs  models.rs
src/logging/: formatter.rs  mod.rs
src/notification/: mod.rs  sender.rs
src/smoothing/: ema.rs  mod.rs  none.rs  sma.rs  tests.rs
src/storage/: database.rs
src/websocket/: mod.rs  server.rs
