[package]
name = "crypto-index-collector"
version = "0.1.0"
edition = "2021"
description = "Real-Time Price Index Collector for Cryptocurrencies"

[dependencies]
tokio = { version = "1.29", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
thiserror = "2.0.12"